added 2 HTML pages

--- a/git-work-flow-HTML2.html
+++ b/git-work-flow-HTML2.html
@@ -26,9 +26,11 @@
 <body>
   <!-- your content here... -->
 
-  <img src="../git-work-flow/images/simp3.jpg">
+
+  <img src="../git-work-flow/images/simp5.jpg">
 </br>
-  <a href="git-work-flow-HTML2.html">Click here for more</a>
+
+  <a href="git-work-flow-HTML.html">Click here for more</a>
   <script src="js/scripts.js"></script>
 </body>
 </html>
