--- a/git-work-flow-HTML.html
+++ b/git-work-flow-HTML.html
@@ -24,8 +24,7 @@
 </head>
 
 <body>
-  <!-- your content here... -->
-
+  <h1>The Simpsons</h1>
   <img src="../git-work-flow/images/simp3.jpg">
 </br>
   <a href="git-work-flow-HTML2.html">Click here for more</a>
